<resources>
    <string name="app_name">ICM</string>
    <string name="searchBTdevices">Searching devices..</string>
    <string name="searchBTdevicesDone">Searching done</string>
    <string name="enterMessage">Enter a message</string>
    <string name="borderradius">10dp</string>
    <string name="connect_button_text">Connect</string>
    <string name="discover_button_text">Discover</string>
    <string name="status">Status:</string>
    <string name="connected_to">Connected to:</string>
    <string name="paired_devices">Paired devices:</string>
    <string name="available_devices">Available devices:</string>

    <string name="shutter_time">Shutter Time(s): </string>
    <string name="max_shutter_time">Max Shutter Time(s): </string>
    <string name="motor_time">Motor Time(s): </string>
    <string name="max_motor_time">Max Motor Time(s): </string>
    <string name="excess_option_set">Excess Option: </string>
    <string name="rear_rotation_direction">Rear motor Direction: </string>
    <string name="front_rotation_direction">Front motor Direction: </string>
    <string name="back_camera">Back Camera: </string>
    <string name="front_camera">Front Camera: </string>
    <string name="back_camera_rotation">Back Camera Rotation: </string>
    <string name="front_camera_rotation">Front Camera Rotation: </string>
    <string name="zoom_current">Zoom Current: </string>
    <string name="zoom_range">Zoom Range: </string>
    <string name="focus_current">Focus Current: </string>
    <string name="focus_range">Focus Range: </string>
    <string name="title_activity_simple_actions">Simple_Actions_Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!--Simple actions-->
    <string name="zoom_to_min">Zoom to min</string>
    <string name="zoom_to_max">Zoom to max</string>
    <string name="zoom_to_min_and_back">Zoom to min and back</string>
    <string name="zoom_to_max_and_back">Zoom to max and back</string>
    <string name="zoom_to_value">Zoom to value</string>
    <string name="zoom_to_value_and_back">Zoom to value and back</string>
    <string name="focus_to_min">Focus to min</string>
    <string name="focus_to_max">Focus to max</string>
    <string name="focus_to_min_and_back">Focus to min and back</string>
    <string name="focus_to_max_and_back">Focus to max and back</string>
    <string name="focus_to_value">Focus to value</string>
    <string name="focus_to_value_and_back">Focus to value and back</string>

    <string name="Zoom_Min_Focus_Min">Zoom min Focus min</string>
    <string name="Zoom_Max_Focus_Max">Zoom max Focus max</string>
    <string name="Zoom_Min_Focus_Max">Zoom min Focus max</string>
    <string name="Zoom_Max_Focus_Min">Zoom max Focus min</string>
    <string name="Zoom_Min_Focus_Min_and_back">Zoom min Focus min and back</string>
    <string name="Zoom_Max_Focus_Max_and_back">Zoom max Focus max and back</string>
    <string name="Zoom_Min_Focus_Max_and_back">Zoom min Focus max and back</string>
    <string name="Zoom_Max_Focus_Min_and_back">Zoom max Focus min and back</string>
    <string name="Zoom_Focus_to_value">Zoom Focus to value</string>
    <string name="Zoom_Focus_to_value_and_back">Zoom Focus to value and back</string>

    <string name="Bokeh">Bokeh</string>
    <string name="Firework_Focus">Firework Focus</string>
    <string name="Firework_Zoom_Focus">Firework Zoom Focus</string>
    <string name="Zoom_Blur_Min">Zoom Blur Min</string>
    <string name="Zoom_Blur_Max">Zoom Blur Max</string>
    <string name="SinWave_1">SinWave 1</string>
    <string name="SinWave_2">SinWave 2</string>



    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>