<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <TextView
            android:id="@+id/motor_header_layout_zoom_current_textview"
            android:layout_width="133dp"
            android:layout_height="35dp"
            android:layout_marginTop="60dp"
            android:layout_marginStart="55dp"
            android:text="@string/zoom_current"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/motor_header_layout_zoom_range_textview"
            android:layout_width="133dp"
            android:layout_height="35dp"
            android:layout_marginTop="60dp"
            android:layout_toEndOf="@id/motor_header_layout_zoom_current_textview"
            android:layout_marginStart="30dp"
            android:text="@string/zoom_range"
            android:textSize="14sp"/>

            <TextView
                android:id="@+id/motor_header_layout_focus_current_textview"
                android:layout_width="133dp"
                android:layout_height="35dp"
                android:layout_marginTop="105dp"
                android:layout_marginStart="55dp"
                android:text="@string/focus_current"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/motor_header_layout_focus_range_textview"
                android:layout_width="133dp"
                android:layout_height="35dp"
                android:layout_marginTop="105dp"
                android:layout_toEndOf="@id/motor_header_layout_focus_current_textview"
                android:layout_marginStart="30dp"
                android:text="@string/focus_range"
                android:textSize="14sp" />
</RelativeLayout>
